- Added roles support to CAccessControlFilter (Qiang)
- Refactored UserIdentity generated by yiic webapp (Qiang)
- Refactored CLinkPager (Qiang)
- Refactored CFilter (Qiang)
- Removed CClientScript::registerBodyScript and CClientScript::registerBodyScriptFile;
  Added a position parameter to CClientScript::registerScript and CClientScript::registerScriptFile (Qiang)
- Fixed a bug in CNumberValidator about checking upper limit (Qiang)
- Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
- Fixed a bug when MySQL tables are using mixed-case letters in their names, relational
  active record fails to work as expected. (Qiang)
- Fixed a bug in CDateFormatter::formatDateTime that causes the method to return null (Qiang)

Version 1.0rc November 10, 2008
-------------------------------
- Fixed issue #18: renderPartial should enable output caching to avoid session start issue (Qiang)
- Added $source parameter to YiiBase::t() (Qiang)
- Added CGettextMessageSource (Qiang)
- Added CHttpCookie.httpOnly property (Qiang)
- Changed CHtml::activeLabel so that it won't encode the label (Qiang)
- Fixed ticket #19: CHtml::activeCheckBox does not work as expected when unchecked (Qiang)
- Added CHtml::checkBoxList(), CHtml::radioButtonList() (Qiang)
- Added CHtml::activeCheckBoxList() and CHtml::activeRadioButtonList() (Qiang)
- Added support for persistent page state (Qiang)
- Added CDbCommandBuilder::createSearchCondition (Qiang)
- Added Hangman game demo (Qiang)
- Added support to allow controller classes to be organized in subdirectories (Qiang)
- Fixed issue #20: CBasePager throws undefined constant error (Qiang)
- Fixed an issue that affects pager's parameter initialization order (Qiang)
- Fixed a bug in determining FK relations in MySQL (Qiang)
- Added CHtml::ajaxSubmitButton (Qiang)
- Added CHtmlPurifier (Qiang)
- Added CMarkdown (Qiang)
- Added CDbConnection.charset (Qiang)
- Fixed a bug in CDbHttpSession that makes it not functional (Qiang)
