@@ -27,15 +27,17 @@ abstract class CModel extends CComponent
 	 * Performs the validation.
 	 * This method executes every validation rule as declared in {@link rules}.
 	 * Errors found during the validation can be retrieved via {@link getErrors}.
+	 * @param array the list of attributes to be validated. Defaults to null,
+	 * meaning every attribute as listed in {@link rules} will be validated.
 	 * @return boolean whether the validation is successful without any error.
 	 */
-	public function validate()
+	public function validate($attributes=null)
 	{
 		$this->clearErrors();
 		if($this->beforeValidate())
 		{
 			foreach($this->createValidators() as $validator)
-				$validator->validate($this);
+				$validator->validate($this,$attributes);
 			$this->afterValidate();
 			return !$this->hasErrors();
 		}
