@@ -135,11 +135,17 @@ abstract class CValidator extends CComponent
 
 	/**
 	 * Validates the specified object.
+	 * @param array the list of attributes to be validated. Defaults to null,
+	 * meaning every attribute listed in {@link attributes} will be validated.
 	 * @param CModel the data object being validated
 	 */
-	public function validate($object)
+	public function validate($object,$attributes=null)
 	{
-		foreach($this->attributes as $attribute)
+		if(is_array($attributes))
+			$attributes=array_intersect($this->attributes,$attributes);
+		else
+			$attributes=$this->attributes;
+		foreach($attributes as $attribute)
 			$this->validateAttribute($object,$attribute);
 	}
 
