@@ -23,6 +23,7 @@ Version 1.0 to be released
 - Refactored CFilter (Qiang)
 - Removed CClientScript::registerBodyScript and CClientScript::registerBodyScriptFile;
   Added a position parameter to CClientScript::registerScript and CClientScript::registerScriptFile (Qiang)
+- Changed CModel::validate() to allow validating specified attributes (Qiang)
 - Fixed a bug in CNumberValidator about checking upper limit (Qiang)
 - Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
 - Fixed a bug when MySQL tables are using mixed-case letters in their names, relational
